# AutoPilot

./: CMakeLists.txt  README.md
autopilot/: CMakeLists.txt  main.cpp
autopilot/include/: AutoPilot.h  AutoPilotThreadOperations.cpp  AutoPilotThreadOperations.h  DeltaTimer.cpp  DeltaTimer.h  LaneDetector.cpp  LaneDetector.hpp
autopilot/include/polyfit/: polyfit.hpp
autopilot/include/ransac/: GRANSAC.hpp
models/pedestrian_and_vehicles/origin/: mobilenet_iter_73000.xml
models/traffic_signs/Caffe/: MobileNetSSD_deploy.prototxt  MobileNetSSD_test.prototxt  MobileNetSSD_train.prototxt  labelmap.prototxt
models/traffic_signs/FP16/: mobilenet_iter_17000.labels  mobilenet_iter_17000.mapping  mobilenet_iter_17000.xml
